# splot

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: SourcesAndHeaders.cmake  Utils.cmake
examples/: CMakeLists.txt  REAME.md  eplot.cpp  eplot.h  main.cpp  render_elements.cpp  render_elements.h
examples/elements/: CMakeLists.txt  eplot.cpp  eplot.h  main.cpp  render_elements.cpp  render_elements.h
examples/fltk/: CMakeLists.txt  REAME.md  fplot.cpp  fplot.h  main.cpp  plot_fltk.h  render_fltk.cpp  render_fltk.h
examples/nanogui/: CMakeLists.txt  README.md  main.cpp  nplot.cpp  nplot.h  render_nanogui.cpp  render_nanogui.h
include/: irender.h  isploter.h  sploter_data.h  sploter_factory.h
src/: sploter.cpp  sploter.h  sploter_data.cpp  sploter_factory.cpp
